--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>SynthCity</title>
 
+    <meta property="og:image" content="https://jeff-beene.com/synthcity/img/social.jpg">
+    <meta property="og:image:type" content="image/jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="675">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
-
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> -->
 
   </head>
 
@@ -23,6 +26,7 @@
       <div id="terminal">
         <span id="cursor">&#9619;</span>
       </div>
+      <button id="enterBtn" style="display:none;">[ ENTER ]</button>
     </div>
 
     <canvas id="canvas"></canvas>
