--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>SynthCity</title>
+    <meta name="description" content="An interactive audiovisual experience by Jeff Beene"/>
 
     <meta property="og:image" content="https://jeff-beene.com/synthcity/img/social.jpg">
     <meta property="og:image:type" content="image/jpg">
@@ -121,7 +122,7 @@
     <script src="js/loading-v2.js"></script>
     <script src="js/alea.js"></script>
 		<script src="js/proc-noise.js"></script>
-    <script src="dist/main.e29ffcc222ca9f38694c.js" async></script>
+    <script src="dist/main.33d34b564d591b6da126.js" async></script>
 
   </body>
 </html>
