day mode expiriment

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="tHeader">#Settings</div>
             <div id="settings" style="display: none;">
               <div id="settingsLockMessage" class="g1" style="display:none; margin-bottom:10px;">
-                *Settings locked, refresh page to unlock
+                >> Settings locked: refresh page to unlock
               </div>
               <div style="margin-bottom: 5px;">
                 <span>Mode:</span>
@@ -121,7 +121,7 @@
     <script src="js/ui.js"></script>
     <script src="js/alea.js"></script>
 		<script src="js/proc-noise.js"></script>
-    <script src="dist/main.2f0a17bd4eb76a99a8ee.js" async></script>
+    <script src="dist/main.7742dd7f31341f852547.js" async></script>
 
   </body>
 </html>
