uiOnUnfocus query param

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 
     <canvas id="canvas" style="opacity:0;"></canvas>
     
-    <script src="js/ui.js"></script>
+    <script src="js/ui-v2.js"></script>
     <script src="js/alea.js"></script>
 		<script src="js/proc-noise.js"></script>
-    <script src="dist/main.3b03ee553d5279b78265.js" async></script>
+    <script src="dist/main.5930e2c202e764ba4741.js" async></script>
 
   </body>
 </html>
