--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>SynthCity</title>
     <meta name="description" content="An interactive audiovisual experience by Jeff Beene"/>
 
+    <meta http-equiv="expires" content="0">
+
     <meta property="og:image" content="https://jeff-beene.com/synthcity/img/social.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1200">
