--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
           <div class="tRow" style="height:25%">
             <div class="tHeader">#Controls</div>
             <div id="controls">&gt;&gt; No program loaded</div>
-            <!-- Fusce gravida egestas neque, id sodales arcu ultricies hendrerit. Maecenas quis justo gravida, semper nulla volutpat, pharetra mi. Sed ac ultricies dolor, dapibus euismod erat. Quisque in orci dolor. Suspendisse id laoreet eros, id volutpat purus. Nam hendrerit massa mauris, malesuada aliquam ipsum aliquam ut. Fusce turpis mauris, mollis ac purus vel, euismod luctus sem. Cras vitae dolor leo. Donec volutpat a arcu at consectetur. -->
           </div>
           <div class="tRow" style="height:32px;">
             <button id="enterBtn">&gt;&gt;Launch&lt;&lt;</button>
@@ -123,7 +122,7 @@
     <script src="js/ui-v2.js"></script>
     <script src="js/alea.js"></script>
 		<script src="js/proc-noise.js"></script>
-    <script src="dist/main.5930e2c202e764ba4741.js" async></script>
+    <script src="dist/main.js" async></script>
 
   </body>
 </html>
