basic car collision, pointer lock bug fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/style-v5.css">
+    <link rel="stylesheet" href="css/style-v6.css">
 
   </head>
 
@@ -111,7 +111,7 @@
             <div id="controls">&gt;&gt; No program loaded</div>
           </div>
           <div class="tRow" style="height:32px;">
-            <button id="enterBtn">&gt;&gt;Launch&lt;&lt;</button>
+            <button id="enterBtn" style="display:none;">&gt;&gt;Launch&lt;&lt;</button>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
 
     <canvas id="canvas" style="opacity:0;"></canvas>
     
-    <script src="js/ui-v2.js"></script>
+    <script src="js/ui-v3.js"></script>
     <script src="js/alea.js"></script>
 		<script src="js/proc-noise.js"></script>
     <script src="dist/main.js" async></script>
