--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
       </div>
     </div>
 
+    <div id="crashMessage" style="display:none;">
+      <div class="g1">[ You crashed ]</div>
+    </div>
+
     <canvas id="canvas" style="opacity:0;"></canvas>
     
     <script src="js/ui-v3.js"></script>
