--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <script src="js/ui-v3.js"></script>
     <script src="js/alea.js"></script>
 		<script src="js/proc-noise.js"></script>
-    <script src="dist/main.js" async></script>
+    <script src="dist/main.4840b40f143ef03913fc.js" async></script>
 
   </body>
 </html>
